Fri Dec 12 19:27:11 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/OBV/Makefile:
	* tests/Portable_Interceptors/Makefile:
	* tests/Portable_Interceptors/Collocated/Service_Context_Manipulation/Makefile:

	  Added missing directories to the build.

	* tests/Portable_Interceptors/Collocated/Dynamic/run_test.pl:

	  Changed the executable name for the test.

Fri Dec 12 19:10:53 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/OBV/Collocated/Forward/Makefile:

	  Added a makefile for this test.

Fri Dec 12 14:15:04 2003  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tao/Synch_Invocation.cpp:

	  Some more cosmetic fixes.

Fri Dec 12 11:35:30 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp:
        * orbsvcs/orbsvcs/LoadBalancing/LB_LeastLoaded.h:
        * orbsvcs/orbsvcs/LoadBalancing/LB_Random.cpp:
        * orbsvcs/orbsvcs/Log/Log_i.cpp:
        
          Added some explicit casting to elininate warnings by MSVC 7.1.
          
        * tao/Typecode.cpp:
        
          Added memory leak fix overlooked in
          
          Sat Nov 29 11:42:48 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
          
          Thanks again to Harvinder Sawhney <harvinder_sawhney@agilent.com>
          for suggesting these fixes.

Fri Dec 12 08:38:14 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/LoadBalancing/LB_LeastLoaded.h:

	  Used a simple cast during initializing a float from a double.

Fri Dec 12 08:37:04 2003  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/PortableGroup/PG_Location_Hash.h:

          Added #include of portablegroup_export.h.

Fri Dec 12 09:46:33 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/RTScheduling/VoidData/VoidData.dsp:
          Added missing libpaths

Fri Dec 12 09:32:13 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_1334_Regression/client.cpp: